--- a/Master Project/biblio.bib
+++ b/Master Project/biblio.bib
@@ -1,3 +1,23 @@
+@article {growth,
+author = {Tuddenham, R. D. and Snyder, M. M.},
+title = {Physical growth of California
+boys and girls from birth to eighteen years},
+journal = {University of California
+Publications in Child Development},
+year = {1954},
+}
+
+@book{found,
+  title={Theoretical Foundations of Functional Data Analysis, with an Introduction to Linear Operators},
+  author={Hsing, T. and Eubank, R.},
+  isbn={9780470016916},
+  lccn={2015014859},
+  series={Wiley Series in Probability and Statistics},
+  url={https://books.google.ch/books?id=6Fu3BgAAQBAJ},
+  year={2015},
+  publisher={Wiley}
+}
+
 @article {Kraus1,
 author = {Kraus, David},
 title = {Components and completion of partially observed functional data},
@@ -63,7 +83,6 @@ pages = {779-799},
 year = {2016},
 doi = {10.1093/biomet/asw040},
 URL = { + http://dx.doi.org/10.1093/biomet/asw040},
-eprint = {/oup/backfile/content_public/journal/biomet/103/4/10.1093_biomet_asw040/2/asw040.pdf}
 }
 
 @article {DH3,
